// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List with custom item renderer 1`] = `
<div
  className=""
>
  <div
    onClick={[Function]}
  >
    ETH (ballance: 20)
  </div>
  <div
    onClick={[Function]}
  >
    ETC (ballance: 2.4)
  </div>
  <div
    onClick={[Function]}
  >
    BTC (ballance: 1.05)
  </div>
</div>
`;

exports[`List with simple items and active class name 1`] = `
<div
  className="active"
>
  <div
    onClick={[Function]}
  >
    ETH
  </div>
  <div
    onClick={[Function]}
  >
    ETC
  </div>
  <div
    onClick={[Function]}
  >
    BTC
  </div>
</div>
`;

exports[`List with simple items and item renderer 1`] = `
<div
  className="active"
>
  <div
    onClick={[Function]}
  >
    name: [object Object]
  </div>
  <div
    onClick={[Function]}
  >
    name: [object Object]
  </div>
  <div
    onClick={[Function]}
  >
    name: [object Object]
  </div>
</div>
`;

exports[`List without any props 1`] = `
<div
  className=""
/>
`;
